force-app/main/default/objects/Universal_PickList__c/Universal_PickList__c.object-meta.xml
<CustomObject>
    <label>Universal PickList</label>
    <nameField>
        <label>Universal PickList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Universal PickLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>