force-app/main/default/objects/Universal_PickList__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>To store dependent picklist field name (level 2)</description>
    <label>Parent</label>
    <length>100</length>
    <type>Text</type>
</CustomField>