force-app/main/default/objects/Universal_PickList__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <description>Name of the picklist field from selected object</description>
    <label>Picklist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>