force-app/main/default/objects/Universal_PickList__c/fields/Record_Types__c.field-meta.xml
<CustomField>
    <fullName>Record_Types__c</fullName>
    <description>To store selected record types</description>
    <label>Record Types</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>