force-app/main/default/objects/Universal_PickList__c/fields/StandardValueSet_Format__c.field-meta.xml
<CustomField>
    <fullName>StandardValueSet_Format__c</fullName>
    <label>StandardValueSet Format</label>
    <length>100</length>
    <type>Text</type>
</CustomField>