force-app/main/default/objects/Universal_PickList__c/fields/Type_of_picklist__c.field-meta.xml
<CustomField>
    <fullName>Type_of_picklist__c</fullName>
    <label>Type of picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Picklist</fullName>
            </value>
            <value>
                <fullName>Multi Picklist</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>